--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# Uploaded photos
+public/uploads/*
+!public/uploads/.gitkeep
+
 # Runtime data
 pids
 *.pid
