implement first draft of marker clustering

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/markerclusterer": "^2.6.2",
     "express": "^4.18.2",
     "multer": "^2.0.2",
     "uuid": "^11.1.0"
